Fix T42587 rotation curves not setting jump to cursor position correctly.